kubeconfigfile/helloWorld-helm/output.yaml
---
# Source: lucidity-test/templates/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: lucidity

  labels:
    istio-injection: enabled
---
# Source: lucidity-test/templates/service.yml
apiVersion: v1
kind: Service

metadata:
  name: myapp-lucidity-test
  namespace: lucidity

spec:

  type: ClusterIP

  selector:
    app: lucidity-test

  ports:

  - port: 80
    targetPort: 8080
---
# Source: lucidity-test/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-lucidity-test
  namespace: lucidity
  labels:

    app.kubernetes.io/name: lucidity-test
    app.kubernetes.io/instance: myapp
    app.kubernetes.io/managed-by: Helm

spec:
  replicas: 3

  selector:
    matchLabels:
      app: lucidity-test

  template:
    metadata:
      labels:
        app: lucidity-test

    spec:
      containers:
        - name: lucidity-test
          image: "gcr.io/google-samples/hello-app:2.0"
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          resources:

            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
---
# Source: lucidity-test/templates/istio-ingress.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: platform-gateway
  namespace: istio-system

spec:

  selector:
    istio: ingress

  servers:

  - port:

      number: 80

      name: http

      protocol: HTTP

    hosts:

    - "*"
---
# Source: lucidity-test/templates/istio-ingress.yml
apiVersion: networking.istio.io/v1

kind: VirtualService

metadata:
  name: myapp-lucidity-test
  namespace: istio-system

spec:

  hosts:
  - "*"

  gateways:
  - platform-gateway

  http:

  - match:

    - uri:

        prefix: /hello

    rewrite:

      uri: /

    route:

    - destination:
        host: "myapp-lucidity-test.lucidity.svc.cluster.local"
        port:
          number: 80
